<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.erand.loginpage.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="2dp"
        android:padding="10dp"
        android:text="@string/login"
        android:textSize="20dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="297dp"
        android:layout_height="400dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray">

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@mipmap/user" />

        <TextView
            android:id="@+id/error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/user_login"
            android:layout_below="@+id/img"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/pink"
            android:textSize="10dp" />

        <EditText
            android:id="@+id/user_login"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/img"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="34dp"
            android:background="@mipmap/email"
            android:hint="@string/user_email"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHint="@color/dark_green" />

        <EditText
            android:id="@+id/user_pass"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_below="@+id/user_login"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:autofillHints="@string/username"
            android:background="@mipmap/email"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHint="@color/dark_green" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/user_pass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@mipmap/create"
            android:lineSpacingExtra="2dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_btn"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/clickhere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_btn"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/forgot"
            android:text="@string/click_here"
            android:textColor="@color/pink"
            android:textSize="10dp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>
